# testmagic

./: pyproject.toml
magic_test/: hello.py  mojoproject.toml  pyproject.toml
