[project]
authors = [{name = "Val", email = "saviorand@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "magic_test"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge", "https://conda.modular.com/max"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
magic_test = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.hatch.build.targets.wheel]
packages = ["magic_test"]
